262578989263/Chart/templates/service-kong-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-metrics-svc
  namespace: infrab
  labels:
    app.kubernetes.io/name: kong-metrics-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 8100
      targetPort: 8100
      protocol: TCP
  selector:
    app.kubernetes.io/name: kong
