262578989263/Chart/templates/gateway-gapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gapi
  labels:
    app.kubernetes.io/name: gapi
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart
    cloudman.io/user: rmay-struct
  namespace: infrab
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: kong-class
  listeners:
    - name: g-api3
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
