262578989263/Chart/templates/httproute-route2-argo1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2-argo1
  namespace: infrab
  labels:
    app.kubernetes.io/name: route2-argo1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo1-argocd-server
          namespace: argocd1
          port: 80
  hostnames:
    - argo.k8s.admin.billingpay.com.br
