262578989263/Chart/templates/httproute-route3-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route3-kong
  namespace: infrab
  labels:
    app.kubernetes.io/name: route3-kong
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-svc
          namespace: infrab
          port: 80
  hostnames:
    - kong.k8s.admin.billingpay.com.br
